--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.17",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
