--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "~6.4.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
