--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.17",
     "@mui/styled-engine-sc": "6.0.0-alpha.6",
     "@mui/system": "^5.14.18",
+    "axios": "^1.6.2",
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
