--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173 --strictPort",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview --port 5001 --strictPort",
+    "serve": "vite preview --port 5001 --strictPort"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,6 +20,7 @@
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "6.0.0-alpha.6",
     "@mui/system": "^5.14.18",
+    "@originjs/vite-plugin-federation": "^1.3.3",
     "axios": "^1.6.2",
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
@@ -26,8 +28,9 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "~6.20.0",
+    "styled-components": "^6.1.1",
     "uuid": "^9.0.1",
-    "styled-components": "^6.1.1"
+    "vite-plugin-federation": "^0.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.38",
