--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --port 5001 --strictPort",
-    "serve": "vite preview --port 5001 --strictPort"
+    "serve": "vite preview --port 5001 --strictPort",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.23.7",
+    "@babel/preset-env": "^7.23.8",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
@@ -22,6 +25,7 @@
     "@mui/system": "^5.14.18",
     "@originjs/vite-plugin-federation": "^1.3.3",
     "axios": "^1.6.2",
+    "babel-jest": "^29.7.0",
     "material-ui-popup-state": "^5.0.10",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -29,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "~6.20.0",
     "styled-components": "^6.1.1",
+    "ts-jest": "^29.1.2",
     "uuid": "^9.0.1",
     "vite-plugin-federation": "^0.0.1"
   },
@@ -40,6 +45,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "jest": "^29.7.0",
     "vite": "^5.0.2"
   }
 }
